@@ -1,16 +1,21 @@
 /*
  * Casciian - Java Text User Interface
  *
- * Written 2013-2025 by Autumn Lamonte
+ * Original work written 2013–2025 by Autumn Lamonte
+ * and dedicated to the public domain via CC0.
  *
- * To the extent possible under law, the author(s) have dedicated all
- * copyright and related and neighboring rights to this software to the
- * public domain worldwide. This software is distributed without any
- * warranty.
+ * Modifications and maintenance:
+ * Copyright 2025 Carlos Rafael Ramirez
  *
- * You should have received a copy of the CC0 Public Domain Dedication along
- * with this software. If not, see
- * <http://creativecommons.org/publicdomain/zero/1.0/>.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  */
 package casciian.backend;
 
@@ -102,17 +107,13 @@ public class MultiBackend implements Backend {
      */
     public void flushScreen() {
         multiScreen.flushPhysical();
-        int n = backends.size();
-        for (int i = 0; i < n; i++) {
-            final Backend backend = backends.get(Math.min(i, backends.size()));
+        for (final Backend backend: backends) {
             // Flush to the physical device on another thread.
-            (new Thread(new Runnable() {
-                public void run() {
-                    synchronized (backend.getScreen()) {
-                        backend.flushScreen();
-                    }
+            Thread.ofVirtual().start(() -> {
+                synchronized (backend.getScreen()) {
+                    backend.flushScreen();
                 }
-            })).start();
+            });
         }
     }
 
@@ -192,6 +193,18 @@ public class MultiBackend implements Backend {
     public void setTitle(final String title) {
         for (Backend backend: backends) {
             backend.setTitle(title);
+        }
+    }
+
+    /**
+     * Report the current working directory to all sub-backends that support
+     * OSC 7.
+     *
+     * @param directory the new working directory
+     */
+    public void setWorkingDirectory(final String directory) {
+        for (Backend backend: backends) {
+            backend.setWorkingDirectory(directory);
         }
     }
 
